--- a/public/adminLte_componets/bootstrap/less/variables.less
+++ b/public/adminLte_componets/bootstrap/less/variables.less
@@ -510,7 +510,7 @@
 @state-warning-bg:               #fcf8e3;
 @state-warning-border:           darken(spin(@state-warning-bg, -10), 5%);
 
-@state-danger-text:              #a94442;
+@state-danger-text:              #dd4b39;
 @state-danger-bg:                #f2dede;
 @state-danger-border:            darken(spin(@state-danger-bg, -10), 5%);
 
