--- a/resources/sass/global.css
+++ b/resources/sass/global.css
@@ -78,11 +78,13 @@
   cursor: pointer;
 }
 .content.table .table.head .item .treeview-items, .content.table .body .item .treeview-items {
-  display: none;
   height: auto;
   width: 100%;
   float: right;
   padding: 0px 0px 0px 15px;
+}
+.content.table .table.head .item .treeview-items .is-show, .content.table .body .item .treeview-items .is-show {
+  display: block;
 }
 .content.table .table.head .item .treeview-items .head, .content.table .table.head .item .treeview-items .body, .content.table .body .item .treeview-items .head, .content.table .body .item .treeview-items .body {
   overflow: hidden;
