--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -75,7 +75,9 @@
       //padding: 0px 15px;
       //box-sizing: border-box;
       .treeview-items{
-        display: none;
+        .is-show{
+          display: block;
+        }
         height: auto;
         width: 100%;
         float: right;
@@ -129,4 +131,5 @@ td.details-control {
 tr.shown td.details-control {
   background: url('/img/details_close.png') no-repeat center center;
 }
+
 
