--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -124,6 +124,9 @@
 
   }
 }
+.content-center{
+    margin: 0 25%;
+}
 td.details-control {
   background: url('/img/details_open.png') no-repeat center center;
   cursor: pointer;
