--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -1,3 +1,33 @@
+$pc-media:960px;
+$pcs-media:959px;
+$pad-media:760px;
+$pads-media:759px;
+$phone-media:480px;
+$phones-media:479px;
+///電腦
+@mixin pc-width() {
+    @media all and (min-width: $pc-media) {
+        @content;
+    }
+}
+//平板
+@mixin pad-width() {
+    @media all and (min-width:$pad-media) and (max-width: $pcs-media) {
+        @content;
+    }
+}
+//小平板
+@mixin small-pad-width() {
+    @media all and (min-width: $phone-media) and (max-width:$pads-media) {
+        @content;
+    }
+}
+//手機
+@mixin phone-width() {
+    @media all and (max-width: $phones-media) {
+        @content;
+    }
+}
 
 .customer-font-1e{
   font-size:1.5em;
@@ -124,6 +154,82 @@
 
   }
 }
+.lds-spinner {
+    display: inline-block;
+    position: absolute;
+}
+.lds-spinner div {
+    transform-origin: 40px 40px;
+    animation: lds-spinner 1.2s linear infinite;
+}
+.lds-spinner div:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 3px;
+    left: 37px;
+    width: 6px;
+    height: 18px;
+    border-radius: 20%;
+    background: #cef;
+}
+.lds-spinner div:nth-child(1) {
+    transform: rotate(0deg);
+    animation-delay: -1.1s;
+}
+.lds-spinner div:nth-child(2) {
+    transform: rotate(30deg);
+    animation-delay: -1s;
+}
+.lds-spinner div:nth-child(3) {
+    transform: rotate(60deg);
+    animation-delay: -0.9s;
+}
+.lds-spinner div:nth-child(4) {
+    transform: rotate(90deg);
+    animation-delay: -0.8s;
+}
+.lds-spinner div:nth-child(5) {
+    transform: rotate(120deg);
+    animation-delay: -0.7s;
+}
+.lds-spinner div:nth-child(6) {
+    transform: rotate(150deg);
+    animation-delay: -0.6s;
+}
+.lds-spinner div:nth-child(7) {
+    transform: rotate(180deg);
+    animation-delay: -0.5s;
+}
+.lds-spinner div:nth-child(8) {
+    transform: rotate(210deg);
+    animation-delay: -0.4s;
+}
+.lds-spinner div:nth-child(9) {
+    transform: rotate(240deg);
+    animation-delay: -0.3s;
+}
+.lds-spinner div:nth-child(10) {
+    transform: rotate(270deg);
+    animation-delay: -0.2s;
+}
+.lds-spinner div:nth-child(11) {
+    transform: rotate(300deg);
+    animation-delay: -0.1s;
+}
+.lds-spinner div:nth-child(12) {
+    transform: rotate(330deg);
+    animation-delay: 0s;
+}
+@keyframes lds-spinner {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
 
 .content-center{
     position: relative;
@@ -132,9 +238,17 @@
 }
 .widget-user{
     .widget-user-header{
-        //overflow: hidden;
-        //height: auto;
-        //min-height:180px;
+        @include small-pad-width
+        {
+            overflow: hidden;
+            height: auto;
+            height: 180px;
+        }
+        @include phone-width{
+            overflow: hidden;
+            height: auto;
+            height: 180px;
+        }
     }
 }
 .mt-5{
