--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -1,27 +1,30 @@
-$pc-media:960px;
-$pcs-media:959px;
-$pad-media:760px;
-$pads-media:759px;
-$phone-media:480px;
-$phones-media:479px;
+$pc-media: 960px;
+$pcs-media: 959px;
+$pad-media: 760px;
+$pads-media: 759px;
+$phone-media: 480px;
+$phones-media: 479px;
 ///電腦
 @mixin pc-width() {
     @media all and (min-width: $pc-media) {
         @content;
     }
 }
+
 //平板
 @mixin pad-width() {
-    @media all and (min-width:$pad-media) and (max-width: $pcs-media) {
+    @media all and (min-width: $pad-media) and (max-width: $pcs-media) {
         @content;
     }
 }
+
 //小平板
 @mixin small-pad-width() {
-    @media all and (min-width: $phone-media) and (max-width:$pads-media) {
+    @media all and (min-width: $phone-media) and (max-width: $pads-media) {
         @content;
     }
 }
+
 //手機
 @mixin phone-width() {
     @media all and (max-width: $phones-media) {
@@ -29,142 +32,183 @@ $phones-media:479px;
     }
 }
 
-.customer-font-1e{
-  font-size:1.5em;
+.customer-font-1e {
+    font-size: 1.5em;
 }
-.customer-font-3e{
-  font-size: 3em;
+
+.customer-font-3e {
+    font-size: 3em;
 }
-.customer-font-6e{
-  font-size: 6em;
+
+.customer-font-6e {
+    font-size: 6em;
 }
-.user-circle{
-  margin: auto;
-  color: white;
+
+.user-circle {
+    margin: auto;
+    color: white;
 }
-.block{
-  display:block;
+
+.block {
+    display: block;
 }
-.no-shadow{
-  box-shadow: none;
+
+.no-shadow {
+    box-shadow: none;
 }
-.point{
-  cursor: pointer;
+
+.point {
+    cursor: pointer;
 }
-.pl-5{
+
+.pl-5 {
     padding-left: 5px;
 }
-.p-20{
-  padding: 20px;
+
+.p-20 {
+    padding: 20px;
 }
-.text-r{
-  text-align: right;
+
+.text-r {
+    text-align: right;
 }
-.content.table{
-  position: relative;
-  //border: 1px solid rgba(0,0,0,.12);
-  border-collapse: collapse;
-  white-space: nowrap;
-  font-size: 13px;
-  background-color: #fff;
-  min-height: 150px;
-  .table.head{
-    border-top: solid 0.5px #E0E0E0;
-    margin: 0px;
-  }
-  .arrow{
-    font-family:'Glyphicons Halflings';
-    opacity: 0.5;
-  }
-  .arrow.sorting:after {
-    opacity: 0.4;
-    content: "\e150";
-  }
-  .arrow.sorting_asc:after{
-    content: "\e155";
-  }
-  .arrow.sorting_desc:after {
-    content: "\e156";
-  }
-  .dataTables_length{
-    label{
-      font-weight: normal;
-      text-align: left;
-      white-space: nowrap;
-      select{
-        width: 75px;
-        display: inline-block;
-      }
+
+.content.table {
+    position: relative;
+    //border: 1px solid rgba(0,0,0,.12);
+    border-collapse: collapse;
+    white-space: nowrap;
+    font-size: 13px;
+    background-color: #fff;
+    min-height: 150px;
+
+    .table.head {
+        border-top: solid 0.5px #E0E0E0;
+        margin: 0px;
     }
-  }
-  .table.head,.body{
-    overflow: hidden;
-    .item{
-      cursor: pointer;
-      //height: auto;
-      //position: relative;
-      //border-top: 1px solid rgba(0,0,0,.12);
-      //border-bottom: 1px solid rgba(0,0,0,.12);
-      //padding: 0px 15px;
-      //box-sizing: border-box;
-      .treeview-items{
-        .is-show{
-          display: block;
+
+    .arrow {
+        font-family: 'Glyphicons Halflings';
+        opacity: 0.5;
+    }
+
+    .arrow.sorting:after {
+        opacity: 0.4;
+        content: "\e150";
+    }
+
+    .arrow.sorting_asc:after {
+        content: "\e155";
+    }
+
+    .arrow.sorting_desc:after {
+        content: "\e156";
+    }
+
+    .dataTables_length {
+        label {
+            font-weight: normal;
+            text-align: left;
+            white-space: nowrap;
+
+            select {
+                width: 75px;
+                display: inline-block;
+            }
         }
-        height: auto;
+    }
+
+    .table.head, .body {
+        overflow: hidden;
+
+        .item {
+            cursor: pointer;
+            //height: auto;
+            //position: relative;
+            //border-top: 1px solid rgba(0,0,0,.12);
+            //border-bottom: 1px solid rgba(0,0,0,.12);
+            //padding: 0px 15px;
+            //box-sizing: border-box;
+            .treeview-items {
+                .is-show {
+                    display: block;
+                }
+
+                height: auto;
+                width: 100%;
+                float: right;
+                padding: 0px 0px 0px 15px;
+                //border-top: 1px solid rgba(0,0,0,.12);
+                .head, .body {
+                    overflow: hidden;
+                }
+            }
+        }
+
+        .item:hover {
+            color: #212529;
+            background-color: rgba(0, 0, 0, .075);
+        }
+    }
+
+    .body {
+        margin-bottom: 20px;
+    }
+
+    .border-bottom {
+        border-bottom: solid 0.5px #E0E0E0;
         width: 100%;
-        float: right;
-        padding: 0px 0px 0px 15px;
-        //border-top: 1px solid rgba(0,0,0,.12);
-        .head,.body{
-          overflow: hidden;
+        float: left;
+        left: 0px;
+        //position: absolute;
+        //bottom: 0px;
+        height: 1px;
+    }
+
+    .columm {
+        padding-top: 15px;
+        padding-bottom: 10px;
+        height: 49px;
+        text-align: center;
+
+    }
+
+    .loading {
+        margin: 50px 0;
+    }
+
+    .footer {
+        nav {
+            .pagination {
+                padding: 0px 0px 10px 0px;
+            }
         }
-      }
-    }
-    .item:hover{
-      color: #212529;
-      background-color: rgba(0,0,0,.075);
-    }
-  }
-  .body{
-    margin-bottom: 20px;
-  }
-  .border-bottom{
-    border-bottom: solid 0.5px #E0E0E0;
-    width: 100%;
-    float: left;
-    left: 0px;
-    //position: absolute;
-    //bottom: 0px;
-    height: 1px;
-  }
-  .columm{
-    padding-top: 15px;
-    padding-bottom: 10px;
-    height: 49px;
-    text-align: center;
 
-  }
-  .loading{
-    margin: 50px 0;
-  }
-  .footer{
-    nav{
-      .pagination{
-        padding: 0px 0px 10px 0px;
-      }
     }
-
-  }
+}
+.back-to-top{
+    position: fixed;
+    bottom: 15px;
+    right: 20px;
+    z-index: 3;
+    a {
+        opacity: 0.37;
+        img {
+            height: 50px;
+            width: 50px;
+        }
+    }
 }
 .lds-spinner {
     display: inline-block;
     position: absolute;
 }
+
 .lds-spinner div {
     transform-origin: 40px 40px;
     animation: lds-spinner 1.2s linear infinite;
 }
+
 .lds-spinner div:after {
     content: " ";
     display: block;
@@ -176,54 +220,67 @@ $phones-media:479px;
     border-radius: 20%;
     background: #cef;
 }
+
 .lds-spinner div:nth-child(1) {
     transform: rotate(0deg);
     animation-delay: -1.1s;
 }
+
 .lds-spinner div:nth-child(2) {
     transform: rotate(30deg);
     animation-delay: -1s;
 }
+
 .lds-spinner div:nth-child(3) {
     transform: rotate(60deg);
     animation-delay: -0.9s;
 }
+
 .lds-spinner div:nth-child(4) {
     transform: rotate(90deg);
     animation-delay: -0.8s;
 }
+
 .lds-spinner div:nth-child(5) {
     transform: rotate(120deg);
     animation-delay: -0.7s;
 }
+
 .lds-spinner div:nth-child(6) {
     transform: rotate(150deg);
     animation-delay: -0.6s;
 }
+
 .lds-spinner div:nth-child(7) {
     transform: rotate(180deg);
     animation-delay: -0.5s;
 }
+
 .lds-spinner div:nth-child(8) {
     transform: rotate(210deg);
     animation-delay: -0.4s;
 }
+
 .lds-spinner div:nth-child(9) {
     transform: rotate(240deg);
     animation-delay: -0.3s;
 }
+
 .lds-spinner div:nth-child(10) {
     transform: rotate(270deg);
     animation-delay: -0.2s;
 }
+
 .lds-spinner div:nth-child(11) {
     transform: rotate(300deg);
     animation-delay: -0.1s;
 }
+
 .lds-spinner div:nth-child(12) {
     transform: rotate(330deg);
     animation-delay: 0s;
 }
+
 @keyframes lds-spinner {
     0% {
         opacity: 1;
@@ -234,42 +291,46 @@ $phones-media:479px;
 }
 
 
-.content-center{
+.content-center {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
 }
-.widget-user{
-    .widget-user-header{
-        @include small-pad-width
-        {
+
+.widget-user {
+    .widget-user-header {
+        @include small-pad-width {
             overflow: hidden;
             height: auto;
             height: 180px;
         }
-        @include phone-width{
+        @include phone-width {
             overflow: hidden;
             height: auto;
             height: 180px;
         }
     }
 }
-.mt-5{
+
+.mt-5 {
     margin-top: 5px;
 }
 
-.vis{
-    visibility:hidden;
+.vis {
+    visibility: hidden;
 }
-.abs{
+
+.abs {
     position: absolute;
 }
+
 td.details-control {
-  background: url('/img/details_open.png') no-repeat center center;
-  cursor: pointer;
+    background: url('/img/details_open.png') no-repeat center center;
+    cursor: pointer;
 }
+
 tr.shown td.details-control {
-  background: url('/img/details_close.png') no-repeat center center;
+    background: url('/img/details_close.png') no-repeat center center;
 }
 
 
