--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -73,6 +73,10 @@ $phones-media: 479px;
     text-align: right;
 }
 
+.owl-carousel{
+    cursor: ew-resize;
+}
+
 .content.table {
     position: relative;
     //border: 1px solid rgba(0,0,0,.12);
